fixed projects grid overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,6 @@ nav {
     grid-template-rows: 1fr;
     grid-auto-rows: ;
     gap: 25px;
-    min-width: 500px;
 }
 .project-card {
     border-radius: 25px;
@@ -508,6 +507,9 @@ footer {
     }
 } 
 @media screen and (max-width: 575px) {
+    * {
+        ;
+    }
     .desktop-header {
         display: none;
     }
@@ -544,7 +546,12 @@ footer {
     .project-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
     }
+    .project-card {
+        width: 100%;
+    }
+
     .stack-container {
         margin: 0px 3%;
     }
